; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmfmac/extr_fweh.c_brcmf_fweh_attach.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmfmac/extr_fweh.c_brcmf_fweh_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcmf_pub = type { %struct.brcmf_fweh_info }
%struct.brcmf_fweh_info = type { i32, i32, i32 }

@brcmf_fweh_event_worker = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @brcmf_fweh_attach(%struct.brcmf_pub* %0) #0 {
  %2 = alloca %struct.brcmf_pub*, align 8
  %3 = alloca %struct.brcmf_fweh_info*, align 8
  store %struct.brcmf_pub* %0, %struct.brcmf_pub** %2, align 8
  %4 = load %struct.brcmf_pub*, %struct.brcmf_pub** %2, align 8
  %5 = getelementptr inbounds %struct.brcmf_pub, %struct.brcmf_pub* %4, i32 0, i32 0
  store %struct.brcmf_fweh_info* %5, %struct.brcmf_fweh_info** %3, align 8
  %6 = load %struct.brcmf_fweh_info*, %struct.brcmf_fweh_info** %3, align 8
  %7 = getelementptr inbounds %struct.brcmf_fweh_info, %struct.brcmf_fweh_info* %6, i32 0, i32 2
  %8 = load i32, i32* @brcmf_fweh_event_worker, align 4
  %9 = call i32 @INIT_WORK(i32* %7, i32 %8)
  %10 = load %struct.brcmf_fweh_info*, %struct.brcmf_fweh_info** %3, align 8
  %11 = getelementptr inbounds %struct.brcmf_fweh_info, %struct.brcmf_fweh_info* %10, i32 0, i32 1
  %12 = call i32 @spin_lock_init(i32* %11)
  %13 = load %struct.brcmf_fweh_info*, %struct.brcmf_fweh_info** %3, align 8
  %14 = getelementptr inbounds %struct.brcmf_fweh_info, %struct.brcmf_fweh_info* %13, i32 0, i32 0
  %15 = call i32 @INIT_LIST_HEAD(i32* %14)
  ret void
}

declare dso_local i32 @INIT_WORK(i32*, i32) #1

declare dso_local i32 @spin_lock_init(i32*) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
